--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <div class="article-content-items" id="article-para">Tasty Foods is an enterprise which established its base in 2007. We adhere to strict quality compliance and have created a niche for ourselves in the realms of Coconut Sugar, Palm Sugar,Candy, South Indian Jaggery, Turmeric & other Agro Products, as well as exports of numerous Indian spices, fruits & vegetables. We are propelled by a strong ethical and value based ideology and with this we surpass the expectations of all our esteemed customers and clients who are based around the globe. The products exported by us undergo a rigorous quality analysis and only then are they deemed fit to be exported to the clients. We are known for our prompt services and wide network which makes it easy for us to deliver the agricultural products within the stipulated timeframe to ensure that their shelf life is not affected by changes in the climate and other environmental factors.Our food products have been grown or farmed without the use of artificial chemicals, hormones, antibiotics or color dyes. Our product will be free of artificial food additives. This is most likely due to natural variation in food handling and production.</div>
             </div>
             <picture class="article-items" id="article-img-container">
-                <source class="article-img" media="(min-width: 1200px)" srcset="https://i.ibb.co/LPFdLFN/article-side-img.jpg">
+                <source class="article-img" media="(min-width: 1200px)" srcset="images/article-side-img.jpg">
                 <img class="article-img" src="images/img-above-video.jpg" alt="">
             </picture>
         </div>
