Made some changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- JAVASCRIPT -->
     <script src="js/menu.js" defer></script>
-    <title>Grill & Chill - Your Happy Place</title>
+    <title>Zest & Zing - Where Bold Flavors Meet Perfect Spice</title>
 </head>
 <body id="body-section">
     <!--WELCOME SECTION-->
@@ -42,10 +42,8 @@
         </header>
         <section id="welcome-message">
             <div id="welcome-message-container">
-                <div class="welcome-container-items" id="title">Grill & Chill</div>
-                <div class="welcome-container-items" id="subtitle">Dinner is often a very celebratory environment, a very safe place, a time
-                to reflect and let the day go and enjoy good food and good wine. It's a very
-                peaceful moment during the day. A great dinner can change your day around.</div>
+                <div class="welcome-container-items" id="title">Zest & Zing</div>
+                <div class="welcome-container-items" id="subtitle">Every meal is an opportunity to slow down, share moments, and savor the beauty of flavor. Let our dishes be the highlight of your day, where food meets joy and memories are made.</div>
                 <a href="booking.html" class="welcome-container-items" id="book-table-btn">Book a Table</a>
             </div>
         </section>
@@ -71,7 +69,11 @@
                 <div id="about-us-heading">Our Story</div>
                 <hr id="about-us-underline" noshade="not set">
             </div>
-            <div class="about-us-items" id="about-us-para">A celebration of Vancouver's cultural diversity and natural environment Hawksworth Restaurant showcases ingredient led, contemporary cuisine that demonstrates the highly skilled technique and relentless drive for perfection that has become Chef David Hawksworth's trademark. Four-time winner of Vancouver Magazine Restaurant Award's Best Upscale Restaurant, Hawksworth Restaurant is glamorous and elegant, yet relaxed and welcoming with warm and attentive service. Hawksworth is located in the heart of the city at Georgia and Howe Streets within the legendary Rosewood Hotel Georgia. Open for breakfast, brunch, lunch and dinner, with in bar dining menus and its own private rooms, Hawksworth can deliver an array of dining experiences from power breakfasts to after-work drinks, to formal gala events.</div>
+            <div class="about-us-items" id="about-us-para">At <b>Zest & Zing</b>, our story is all about blending tradition with innovation. We started with a passion for India's vibrant spices and a vision to elevate non-veg dining. Our menu brings together bold, authentic flavors with a modern twist, featuring everything from sizzling tandoori grills to inventive curries.
+                <br/><br/>
+                We're dedicated to using the finest ingredients and creative techniques to ensure every dish is a celebration of taste. Our inviting atmosphere and exceptional service are designed to make each visit special.
+                <br/><br/>
+                Discover a new side of Indian cuisine at Zest & Zing, where every meal is an experience full of zest and zing.</div>
         </div>
     </section>
 
@@ -84,64 +86,64 @@
             </div>
             <div id="menu-gallery" class="menu-items">
                 <div class="menu-gallery-items">
-                    <a class="each-menu-items menu-img-container"><img class="menu-img" src="images/tandoori-chicken.jpg" alt=""></a>
+                    <a class="each-menu-items menu-img-container"><img class="menu-img" src="images/Menu/tandoori-chicken.jpg" alt=""></a>
                     <div class="each-menu-items menu-name">Tandoori Chicken</div>
-                    <div class="each-menu-items menu-price">~ Rs.270</div>
+                    <div class="each-menu-items menu-price">~ ₹450</div>
                 </div>
                 <div class="menu-gallery-items">
-                    <a class="each-menu-items menu-img-container"><img class="menu-img" src="images/chicken-leg-piece.jpg" alt=""></a>
-                    <div class="each-menu-items menu-name">Chicken Leg Piece</div>
-                    <div class="each-menu-items menu-price">~ Rs.90</div>
+                    <a class="each-menu-items menu-img-container"><img class="menu-img" src="images/Menu/butter-chicken.jpg" alt=""></a>
+                    <div class="each-menu-items menu-name">Butter Chicken</div>
+                    <div class="each-menu-items menu-price">~ ₹500</div>
                 </div>
                 <div class="menu-gallery-items">
-                    <a class="each-menu-items menu-img-container"><img class="menu-img" src="images/egg-masala-fry.jpg" alt=""></a>
-                    <div class="each-menu-items menu-name">Egg Masala Fry</div>
-                    <div class="each-menu-items menu-price">~ Rs.75</div>
+                    <a class="each-menu-items menu-img-container"><img class="menu-img" src="images/Menu/chicken-biryani.jpg" alt=""></a>
+                    <div class="each-menu-items menu-name">Chicken Biryani</div>
+                    <div class="each-menu-items menu-price">~ ₹500</div>
                 </div>
                 <div class="menu-gallery-items">
-                    <a class="each-menu-items menu-img-container"><img class="menu-img" src="images/chicken-angara.jpg" alt=""></a>
-                    <div class="each-menu-items menu-name">Chicken Angara</div>
-                    <div class="each-menu-items menu-price">~ Rs.140</div>
+                    <a class="each-menu-items menu-img-container"><img class="menu-img" src="images/Menu/chicken-korma.jpg" alt=""></a>
+                    <div class="each-menu-items menu-name">Chicken Korma</div>
+                    <div class="each-menu-items menu-price">~ ₹550</div>
                 </div>
                 <div class="menu-gallery-items">
-                    <a class="each-menu-items menu-img-container"><img class="menu-img" src="images/mutton-afghani.jpg" alt=""></a>
-                    <div class="each-menu-items menu-name">Mutton Afghani</div>
-                    <div class="each-menu-items menu-price">~ Rs.200</div>
+                    <a class="each-menu-items menu-img-container"><img class="menu-img" src="images/Menu/malai-tikka.jpg" alt=""></a>
+                    <div class="each-menu-items menu-name">Malai Tikka</div>
+                    <div class="each-menu-items menu-price">~ ₹550</div>
                 </div>
                 <div class="menu-gallery-items">
-                    <a class="each-menu-items menu-img-container"><img class="menu-img" src="images/paneer-kepsa.jpg" alt=""></a>
-                    <div class="each-menu-items menu-name">Paneer Kepsa</div>
-                    <div class="each-menu-items menu-price">~ Rs.600</div>
+                    <a class="each-menu-items menu-img-container"><img class="menu-img" src="images/Menu/mutton-karahi.jpg" alt=""></a>
+                    <div class="each-menu-items menu-name">Mutton Karahi</div>
+                    <div class="each-menu-items menu-price">~ ₹600</div>
                 </div>
                 <div class="menu-gallery-items">
-                    <a class="each-menu-items menu-img-container"><img class="menu-img" src="images/paneer-tikka.jpg" alt=""></a>
-                    <div class="each-menu-items menu-name">Paneer Tikka (6pcs)</div>
-                    <div class="each-menu-items menu-price">~ Rs.130</div>
+                    <a class="each-menu-items menu-img-container"><img class="menu-img" src="images/Menu/mutton-kebab-platter.jpg" alt=""></a>
+                    <div class="each-menu-items menu-name">Mutton Kebab Platter</div>
+                    <div class="each-menu-items menu-price">~ ₹600</div>
                 </div>
                 <div class="menu-gallery-items">
-                    <a class="each-menu-items menu-img-container"><img class="menu-img" src="images/veg-manchow-soup.jpg" alt=""></a>
-                    <div class="each-menu-items menu-name">Veg. Manchow Soup</div>
-                    <div class="each-menu-items menu-price">~ Rs.70</div>
+                    <a class="each-menu-items menu-img-container"><img class="menu-img" src="images/Menu/shahi-paneer.jpg" alt=""></a>
+                    <div class="each-menu-items menu-name">Shahi Paneer</div>
+                    <div class="each-menu-items menu-price">~ ₹500</div>
                 </div>
                 <div class="menu-gallery-items">
-                    <a class="each-menu-items menu-img-container"><img class="menu-img" src="images/chicken-moghlai.jpg" alt=""></a>
-                    <div class="each-menu-items menu-name">Chicken Moghlai</div>
-                    <div class="each-menu-items menu-price">~ Rs.130</div>
+                    <a class="each-menu-items menu-img-container"><img class="menu-img" src="images/Menu/dal-makhani.jpg" alt=""></a>
+                    <div class="each-menu-items menu-name">Dal Makhani</div>
+                    <div class="each-menu-items menu-price">~ ₹400</div>
                 </div>
                 <div class="menu-gallery-items">
-                    <a class="each-menu-items menu-img-container"><img class="menu-img" src="images/mutton-korma.jpg" alt=""></a>
-                    <div class="each-menu-items menu-name">Mutton Korma</div>
-                    <div class="each-menu-items menu-price">~ Rs.180</div>
+                    <a class="each-menu-items menu-img-container"><img class="menu-img" src="images/Menu/keema-mutton.jpg" alt=""></a>
+                    <div class="each-menu-items menu-name">Keema Mutton</div>
+                    <div class="each-menu-items menu-price">~ ₹550</div>
                 </div>
                 <div class="menu-gallery-items">
-                    <a class="each-menu-items menu-img-container"><img class="menu-img" src="images/lollypop-kepsa.jpg" alt=""></a>
-                    <div class="each-menu-items menu-name">Lollypop Kepsa</div>
-                    <div class="each-menu-items menu-price">~ Rs.400</div>
+                    <a class="each-menu-items menu-img-container"><img class="menu-img" src="images/Menu/kadai-chicken.jpg" alt=""></a>
+                    <div class="each-menu-items menu-name">Kadai Chicken</div>
+                    <div class="each-menu-items menu-price">~ ₹500</div>
                 </div>
                 <div class="menu-gallery-items">
-                    <a class="each-menu-items menu-img-container"><img class="menu-img" src="images/chicken-tikka.jpg" alt=""></a>
-                    <div class="each-menu-items menu-name">Chicken Tikka (6pcs)</div>
-                    <div class="each-menu-items menu-price">~ Rs.150</div>
+                    <a class="each-menu-items menu-img-container"><img class="menu-img" src="images/Menu/palak-paneer.jpg" alt=""></a>
+                    <div class="each-menu-items menu-name">Palak Paneer</div>
+                    <div class="each-menu-items menu-price">~ ₹450</div>
                 </div>
             </div>
         </div>
@@ -156,7 +158,11 @@
         <div id="article-container">
             <div class="article-items" id="article-content">
                 <div class="article-content-items" id="article-heading">Discover the True meaning of Taste</div>
-                <div class="article-content-items" id="article-para">Tasty Foods is an enterprise which established its base in 2007. We adhere to strict quality compliance and have created a niche for ourselves in the realms of Coconut Sugar, Palm Sugar,Candy, South Indian Jaggery, Turmeric & other Agro Products, as well as exports of numerous Indian spices, fruits & vegetables. We are propelled by a strong ethical and value based ideology and with this we surpass the expectations of all our esteemed customers and clients who are based around the globe. The products exported by us undergo a rigorous quality analysis and only then are they deemed fit to be exported to the clients. We are known for our prompt services and wide network which makes it easy for us to deliver the agricultural products within the stipulated timeframe to ensure that their shelf life is not affected by changes in the climate and other environmental factors.Our food products have been grown or farmed without the use of artificial chemicals, hormones, antibiotics or color dyes. Our product will be free of artificial food additives. This is most likely due to natural variation in food handling and production.</div>
+                <div class="article-content-items" id="article-para">Immerse yourself in the true meaning of taste, where each dish is a masterful blend of tradition and innovation. At our restaurant, we believe that taste is a multi-dimensional experience that goes beyond just satisfying your hunger. It's about discovering the intricate balance of flavors, textures, and aromas that make each meal a unique adventure. We meticulously select the finest ingredients and expertly combine them with aromatic spices to create dishes that are both authentic and innovative.
+
+                    Our menu showcases a rich variety of non-veg specialties, from the smoky allure of our tandoori grills to the deep, complex flavors of our curries. Each dish is crafted with an emphasis on harmony and depth, ensuring that every bite delivers a burst of flavor and a memorable culinary experience. We take pride in our dedication to excellence, transforming traditional recipes with modern techniques to bring out the true essence of Indian cuisine.
+                    
+                    Discover how exceptional taste can elevate a simple meal into an unforgettable dining experience, where every visit is an opportunity to explore the profound and delightful nuances of flavor that define our culinary philosophy.</div>
             </div>
             <picture class="article-items" id="article-img-container">
                 <source class="article-img" media="(min-width: 1200px)" srcset="images/article-side-img.jpg">
@@ -175,15 +181,15 @@
             <div class="testimonial-items" id="testimonial-gallery">
                 <div class="testimonial-gallery-items" id="first-testimonial">
                     <div class="testimonial-quote"><i class="fa-solid fa-quote-left quotes-icon-left"></i></div>
-                    <div class="testimonial-content">"The food was excellent and so was the service. I had the mushroom risotto with scallops which was awesome. My wife had a burger over greens (gluten-free) which was also very good. They were very conscientious about gluten allergies. The restaurant has a vey nice ambiance and a cozy bar."</div>
+                    <div class="testimonial-content">"Dining at Zest & Zing was an absolute delight! The flavors were bold and authentic, and each dish was perfectly crafted. The tandoori grills were especially memorable. Highly recommend for anyone craving top-notch Indian cuisine!"</div>
                 </div>
                 <div class="testimonial-gallery-items" id="second-testimonial">
                     <div class="testimonial-quote"><i class="fa-solid fa-quote-left quotes-icon-left"></i></div>
-                    <div class="testimonial-content">"Walked in for dinner in a Wednesday night and sat at the bar. The bartender, Erin, couldn't have been nicer. She was quick, efficient and friendly. She helped recommend something for my dinner and the Lobster Florentine didn't disappoint! I even returned the next morning for breakfast and got similar service! It was a gem I found and can't wait to return next year - I just hope Erin is still bartending then!"</div>
+                    <div class="testimonial-content">"A fantastic culinary experience from start to finish. The blend of traditional spices with modern techniques made every bite unforgettable. The atmosphere was warm and inviting, and the service was impeccable. I'll definitely be returning!"</div>
                 </div>
                 <div class="testimonial-gallery-items" id="third-testimonial">
                     <div class="testimonial-quote"><i class="fa-solid fa-quote-left quotes-icon-left"></i></div>
-                    <div class="testimonial-content">"We enjoyed the Eggs Benedict served on homemade focaccia bread and hot coffee. Perfect service."</div>
+                    <div class="testimonial-content">"Zest & Zing is a gem in the city. The non-veg dishes are a revelation, and the attention to detail in every dish is evident. The rich flavors and innovative presentations make this place stand out. A must-visit for food enthusiasts!"</div>
                 </div>
             </div>
         </div>
@@ -200,19 +206,19 @@
             </div>
             <div class="chef-items" id="chef-gallery">
                 <div class="chef-gallery-items" id="first-chef">
-                    <div><img class="chef-img" src="images/albert-c-miller.jpg" alt=""></div>
-                    <div class="chef-name">Albert C.Miller</div>
-                    <div class="chef-post">Station Chef</div>
+                    <div><img class="chef-img" src="images/Chefs/albert-c-miller.jpg" alt=""></div>
+                    <div class="chef-name">Aarav Patel</div>
+                    <div class="chef-post">Head Chef</div>
                 </div>
                 <div class="chef-gallery-items" id="second-chef">
-                    <div><img class="chef-img" src="images/monika-sen.jpg" alt=""></div>
-                    <div class="chef-name">Monika Sen</div>
-                    <div class="chef-post">Pastry Chef</div>
+                    <div><img class="chef-img" src="images/Chefs/monika-sen.jpg" alt=""></div>
+                    <div class="chef-name">Priya Kapoor</div>
+                    <div class="chef-post">Sous Chef</div>
                 </div>
                 <div class="chef-gallery-items" id="third-chef">
-                    <div><img class="chef-img" src="images/mark-alexender.jpeg" alt=""></div>
-                    <div class="chef-name">Mark Alexender</div>
-                    <div class="chef-post">Head Chef</div>
+                    <div><img class="chef-img" src="images/Chefs/mark-alexender.jpeg" alt=""></div>
+                    <div class="chef-name">Vikram Sharma</div>
+                    <div class="chef-post">Executive Pastry Chef</div>
                 </div>
             </div>
         </div>
@@ -262,8 +268,8 @@
             <div class="footer-items" id="footer-contact">
                 <div class="footer-contact-items footer-headings">CONTACT</div>
                 <div class="footer-contact-items footer-para">
-                    <div class="footer-contact-para-items">15 Florida Ave Palo-Alto, 1111 CA</div>
-                    <div class="footer-contact-para-items">TEL: 410-602-8008</div>
+                    <div class="footer-contact-para-items">123, Green Park Extension, New Delhi - 110016, India</div>
+                    <div class="footer-contact-para-items">TEL: +91 11 2345 6789</div>
                     <a href="mailto:siddrameez71@gmail.com" class="footer-contact-para-items" id="footer-email-btn">Email</a>
                 </div>
             </div>
