Made some changes

--- a/booking.html
+++ b/booking.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./images/tabicon.png" width="31px">
+    <link rel="icon" href="./images/tabicon2.png" width="31px">
     <link rel="stylesheet" href="css/booking.css">
     <link rel="stylesheet" href="css/booking-responsive.css">
     <script src="https://kit.fontawesome.com/5678c3e1ef.js" crossorigin="anonymous"></script>
-    <title>Grill & Chill - Book a Table</title>
+    <title>Zest & Zing - Book a Table</title>
 </head>
 
 <body onload="calcTime()">
     <section id="book-section">
         <div id="book-container">
-            <div class="book-items" id="book-heading">Reservation at Grill & Chill</div>
+            <div class="book-items" id="book-heading">Reservation at Zest & Zing</div>
             <div class="book-items" id="book-form">
                 <form id="form-container" action="payment.html" name="book-table-form" autocomplete="off" onsubmit="getFormInputs()" method="POST" netlify>
                     <div class="form-items" id="date-time-input-container">
