--- a/confirm.html
+++ b/confirm.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./images/tabicon.png" width="31px">
+    <link rel="icon" href="./images/tabicon2.png" width="31px">
     <link rel="stylesheet" href="css/confirm.css">
     <link rel="stylesheet" href="css/confirm-responsive.css">
     <script src="https://kit.fontawesome.com/5678c3e1ef.js" crossorigin="anonymous"></script>
-    <title>Grill & Chill - Your Table is Booked</title>
+    <title>Zest & Zing - Your Table is Booked</title>
 </head>
 <body>
     <section id="confirm-section">
@@ -36,7 +36,7 @@
                         <div class="info-name" id="time">00:00</div>
                     </div>
                 </div>
-                <div class="confirm-content-items" id="thank-you-message-container">Thanks for making a reservation at Grill & Chill, however we can not honor outside requests. We hope you have a great time.</div>
+                <div class="confirm-content-items" id="thank-you-message-container">Thanks for making a reservation at Zest & Zing, however we can not honor outside requests. We hope you have a great time.</div>
                 <a href="index.html" class="confirm-content-items" id="ok-btn">OK</a>
             </div>
         </div>
