--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <link rel="icon" href="./images/tabicon.png" width="31px">
+    <link rel="icon" href="./images/tabicon2.png" width="31px">
     <script src="https://kit.fontawesome.com/5678c3e1ef.js" crossorigin="anonymous"></script>
 
     <!-- JAVASCRIPT -->
@@ -19,7 +19,7 @@
     <!-- Mobile-Header-Section -->
     <section id="mobile-header-section">
         <header id="mobile-header-container">
-            <a class="mobile-header-items" id="mobile-logo"><img src="./images/mobile-logo.png" width="25px"></a>
+            <a class="mobile-header-items" id="mobile-logo"><img src="./images/mobile-logo2.png" width="25px"></a>
             <a class="mobile-header-items" id="menu-icon-container"><i class="fa-solid fa-bars" id="menu-icon"></i></a>
         </header>
     </section>
