--- a/payment.html
+++ b/payment.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./images/tabicon.png" width="31px">
+    <link rel="icon" href="./images/tabicon2.png" width="31px">
     <link rel="stylesheet" href="css/payment.css">
     <link rel="stylesheet" href="css/payment-repsonsive.css">
     <script src="https://kit.fontawesome.com/5678c3e1ef.js" crossorigin="anonymous"></script>
-    <title>Grill & Chill - Make Payment</title>
+    <title>Zest & Zing - Make Payment</title>
 </head>
 <body>
     <section id="payment-section">
